[package]
name = "cli_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command-rpc = { version = "0.1.10", path = "D://DATA//v4build//projekte//command_rpc" }
clap  = { version = "*", features = ["derive"] }